# voicelearn-ios

./: .gitignore  .mcp.json  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMS_SKILL_SETUP_GUIDE.md  INTEGRATION_SUMMARY.md  LICENSE  POCKET_TTS_INTEGRATION_STATUS.md  Package.swift  README.md  SECURITY.md  codecov.yml  default.profraw  project.yml
.claude/: settings.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.hooks/: post-commit  pre-commit  pre-push  prepare-commit-msg
UnaMentis/: CLAUDE.md  Info.plist  LaunchScreen.storyboard  PrivacyInfo.xcprivacy  UnaMentisApp.swift
UnaMentis Watch App/: Info.plist  UnaMentisWatchApp.swift
UnaMentis.xcodeproj/: project.pbxproj
VoiceLearn/: VoiceLearnApp.swift
VoiceLearn.xcodeproj/: project.pbxproj
curriculum/: CURRICULUM_FOREIGN_LANGUAGE_ANALYSIS.md  README.md
demo/: CLAUDE.md  IOS_DEMO_VIDEO_AUTOMATION.md  README.md  ios_demo_video_generator.py
docs/: AI_MODEL_SELECTION_2026.md  AI_SIMULATOR_TESTING.md  AI_TASK_ANALYSIS.md  APP_STORE_COMPLIANCE.md  CHATTERBOX_SERVER_SETUP.md  CODE_QUALITY_INITIATIVE.md  CONTRIBUTING.md  CURRICULUM_SOURCE_API_RESEARCH.md  DEBUG_TESTING_UI.md  DEVICE_CAPABILITY_TIERS.md  DEVICE_SETUP_GUIDE.md  ENTERPRISE_ARCHITECTURE.md  FEATURE_FLAGS.md  FEATURE_FLAGS_ARCHITECTURE.md  FEEDBACK_ARCHITECTURE.md  FEEDBACK_COMPLETION_SUMMARY.md  FEEDBACK_FEATURE_PLAN.md  FEEDBACK_IMPLEMENTATION_SUMMARY.md  FEEDBACK_TEST_REPORT.md  GLM_ASR_IMPLEMENTATION_PROGRESS.md  GLM_ASR_NANO_2512.md  GLM_ASR_ON_DEVICE_GUIDE.md  GLM_ASR_SERVER_TRD.md  LEARNER_PROFILE_EXPLORATION.md  LLM_TOOLS.md  MULTILINGUAL_VOICE_LEARNING_EXPLORATION.md  OPENTELEMETRY_SPEC.md  PATCH_PANEL_ARCHITECTURE.md  PATCH_PANEL_IMPLEMENTATION_PLAN.md  SETUP.md  (+15 more)
server/importers/: .coverage  CLAUDE.md  __init__.py  clean_question_bundles.py  normalize_question_bundles.py  pyproject.toml
server/importers/analysis/: __init__.py  curriculum_analyzer.py
server/importers/core/: __init__.py  adapter.py  discovery.py  models.py  orchestrator.py  plugin.py  registry.py  reprocess_models.py  reprocess_orchestrator.py  text_cleaner.py
server/importers/data/: ck12_catalog.json
server/importers/docs/: PLUGIN_ARCHITECTURE.md  PLUGIN_SPEC.md
server/importers/docs/examples/: example_source_plugin.py
server/importers/enrichment/: __init__.py  diagram_generator.py  formula_generator.py  llm_enrichment.py  map_generator.py  media_generation.py
server/importers/output/: kb-ios-bundle.json
server/importers/plugins/: __init__.py
server/importers/plugins/enrichers/: __init__.py
server/importers/plugins/parsers/: __init__.py
server/importers/plugins/sources/: __init__.py  ck12_flexbook.py  coreknowledge.py  doe_science_bowl.py  engageny.py  merge_kb_questions.py  merlot.py  mit_ocw.py  open_trivia_qa.py  qb_reader.py
server/importers/sources/: mit_ocw.py
server/importers/tests/: test_ck12_flexbook.py  test_orchestrator.py  test_plugin_architecture.py
server/management/: .coverage  AGENTS.md  CLAUDE.md  README.md  audio_ws.py  bonjour_advertiser.py  deployment_api.py  fov_context_api.py  import_api.py  latency_harness_api.py  lists_api.py  media_api.py  modules_api.py  plugin_api.py  pyproject.toml  reprocess_api.py  server.py  session_cache_integration.py  tts_api.py  tts_lab_api.py  tts_pregen_api.py
server/management/auth/: __init__.py  auth_api.py  auth_middleware.py  password_service.py  rate_limiter.py  token_service.py
server/management/data/: metrics_daily.json  metrics_hourly.json
server/management/fov_context/: __init__.py  confidence.py  manager.py  models.py  session.py
server/management/fov_context/tests/: __init__.py  test_confidence.py  test_manager.py  test_models.py  test_session.py
server/management/static/: app.js  index.html
server/management/tests/: conftest.py  test_audio_ws.py  test_auth_api.py  test_auth_middleware.py  test_bonjour_advertiser.py  test_deployment_api.py  test_diagnostic_logging.py  test_fov_confidence.py  test_fov_context_api.py  test_fov_manager.py  test_fov_session.py  test_idle_manager.py  test_import_api.py  test_kb_audio.py  test_kb_packs_api.py  test_kb_questions_repository.py  test_latency_harness_api.py  test_latency_harness_api_extended.py  test_lists_api.py  test_media_api.py  test_metrics_history.py  test_modules_api.py  test_password_service.py  test_path_security.py  test_plugin_api.py  test_plugin_api_extended.py  test_rate_limiter.py  test_reprocess_api.py  test_resource_monitor.py  test_server.py  test_server_extended.py  test_session_cache_integration.py  test_session_integration.py  test_token_service.py  test_tts_api.py  test_tts_api_extended.py  test_tts_api_kb.py  test_tts_cache.py  test_tts_prefetcher.py  test_tts_pregen_api.py  (+8 more)
server/management/tests/property/: __init__.py  test_fov_context_properties.py  test_tts_cache_properties.py  test_tts_pregen_properties.py
server/management/tts_cache/: __init__.py  cache.py  kb_audio.py  models.py  prefetcher.py  resource_pool.py
server/management/tts_cache/tests/: __init__.py  test_cache.py  test_resource_pool.py
server/management/tts_pregen/: __init__.py  comparison_manager.py  content_extractors.py  job_manager.py  models.py  orchestrator.py  profile_manager.py  repository.py
server/usm-core/: .gitignore  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
server/usm-core/config/: services.toml
server/usm-core/crates/usm-cli/: Cargo.toml
server/usm-core/crates/usm-cli/src/: main.rs
server/usm-core/crates/usm-core/: Cargo.toml
server/usm-core/crates/usm-core/src/: lib.rs
server/usm-core/crates/usm-core/src/config/: mod.rs
server/usm-core/crates/usm-core/src/events/: bus.rs  mod.rs
server/usm-core/crates/usm-core/src/metrics/: mod.rs
server/usm-core/crates/usm-core/src/monitor/: backend.rs  linux.rs  macos.rs  mod.rs
server/usm-core/crates/usm-core/src/server/: mod.rs
server/usm-core/crates/usm-core/src/service/: instance.rs  mod.rs  registry.rs  template.rs
server/usm-core/crates/usm-ffi/: Cargo.toml
server/usm-core/crates/usm-ffi/src/: lib.rs
(+843 files in other folders)
