[project]
name = "unamentis-management"
version = "0.1.0"
description = "UnaMentis Management Server"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.0",
    "bcrypt>=4.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-aiohttp>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
