[project]
name = "unamentis-management"
version = "0.1.0"
description = "UnaMentis Management Server"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "bcrypt>=4.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
discovery = [
    "zeroconf>=0.131.0",  # mDNS/Bonjour for client auto-discovery
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-aiohttp>=1.0",
    "hypothesis>=6.100.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    "*/tests/*",
    "migrate_assets.py",  # Migration script, run once
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "except ImportError:",
    "subprocess.check_call",
    "logger.debug",
    "logger.info",
    "logger.warning",
    "logger.error",
    "logging.debug",
    "logging.info",
    "logging.warning",
    "logging.error",
]
