[package]
name = "usm-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for USM Core"
license = "MIT"

[[bin]]
name = "usm"
path = "src/main.rs"

[dependencies]
usm-core = { path = "../usm-core" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
