[package]
name = "usm-core"
description = "Cross-platform service manager core library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP/WebSocket server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Process monitoring
sysinfo = { workspace = true }

# File watching
notify = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Directory utilities
dirs = "5.0"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
proptest = "1.4"
