[package]
name = "usm-ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI bindings for USM Core - enables Swift/Python integration"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
usm-core = { path = "../usm-core" }
tokio = { version = "1.35", features = ["rt-multi-thread"] }
libc = "0.2"
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.26"
